Correction of formal description

--- a/glushkovizer/doc/automata.tex
+++ b/glushkovizer/doc/automata.tex
@@ -1,31 +1,32 @@
 \section{Les automates}
 
 Dans cette partie, nous parlerons des automates et plus particulièrement, nous
-allons parler des automates sans \(\varepsilon\) transition (de célèbre
-automate utilise des \(\varepsilon\)-transitions, comme ceux de
-\textit{Thompson}, qui sont utilisés par nos ordinateurs). Pour autant les
+allons parler des automates sans \(\varepsilon\) transition (de célèbres
+automates utilisent des \(\varepsilon\) transitions, comme ceux de
+\textit{Thompson}, qui sont utilisés par nos ordinateurs). Pour autant, les
 automates que nous verrons sont tout aussi bons que ceux avec \(\varepsilon\)
 transition.
 
 \subsection{Définition}
 
-Comme dit précédemment un automate est un objet mathématique reconnaissant un
-langage, on notera \(M \in AFN(\Sigma, \eta)\) l'automate qui a pour transition
+Comme dit précédemment, un automate est un objet mathématique reconnaissant un
+langage. On notera \(M \in AFN(\Sigma, \eta)\) l'automate qui a pour transition
 des valeurs dans \(\Sigma\), des valeurs \og{}d'état\fg{} dans \(\eta\). Et
-\(AFN(\Sigma, \eta)\) l'ensemble des automates fini non déterministe de valeur
-de transition dans \(\Sigma\) et de valeur d'état dans \(\eta\). On écrira donc
-\(L(M)\) pour désigner le langage qu'il reconnait. Un automate est un tuple
-qu'on peut écrire de cette forme \(M = (Q, I, F, \delta)\) avec~:
+\(AFN(\Sigma, \eta)\) l'ensemble des automates finis non déterministes de
+valeur de transition dans \(\Sigma\) et de valeur d'état dans \(\eta\). On
+écrira donc \(L(M)\) pour désigner le langage qu'il reconnait. Un automate est
+un tuple qu'on peut écrire de cette forme \(M = (Q, I, F, \delta)\) avec~:
 
 \begin{align*}
-    Q        & \subseteq \eta \quad \text{L'ensemble des états qui constitue l'automate} \\
-    I        & \subseteq Q \quad \text{L'ensemble des états initiaux}                    \\
-    F        & \subseteq Q \quad \text{L'ensemble des états finaux}                      \\
+    Q & \subseteq \eta \quad \text{L'ensemble des états qui constituent
+    l'automate}                                                                \\
+    I & \subseteq Q \quad \text{L'ensemble des états initiaux}          \\
+    F & \subseteq Q \quad \text{L'ensemble des états finaux}            \\
     \delta:~ & Q \times \Sigma \to 2^Q \quad \text{La fonction de transition}
 \end{align*}
 
 Un automate peut se représenter à l'aide d'un graphe orienté, valué,
-particulier, Par exemple si on veut représenter \(M = (\{q_1, q_2, q_3, q_4,
+particulier. Par exemple si on veut représenter \(M = (\{q_1, q_2, q_3, q_4,
 q_5\}, \{q_1\},\{q_2, q_3\}, \delta)\) avec \(M \in AFN(\Sigma, \eta)\),
 \(\Sigma = \{0, 1\}\), \(\eta = \{q_1, q_2, q_3, q_4, q_5\}\) et \(\delta\)
 défini comme ceci~:
@@ -70,7 +71,7 @@ défini comme ceci~:
 \end{figure}
 
 Dans la Figure~\ref{fig:automata}, on peut voir que les états initiaux (ici que
-\(q_1\)) ont une petite flèche qui pointe sur lui et que les états finaux ont
+\(q_1\)) ont une petite flèche qui pointe sur eux et que les états finaux ont
 un double contour. Et que les transitions sont symbolisées par des flèches
 entre les états et que ces flèches sont labellisées.
 
@@ -155,8 +156,8 @@ En la définissant récursivement de telle sorte~:
 \vphantom{}
 
 \begin{definition}
-    Un automate est dit \textit{standard} à l'instant où il ne possède qu'un seul
-    état initial non ré-entrant, aussi défini comme ceci~:
+    Un automate est dit \textit{standard} à l'instant où il ne possède qu'un
+    seul état initial non ré-entrant, aussi défini comme ceci~:
 
     \begin{gather*}
         M = (Q, \{i\}, F, \delta) \quad \text{avec} \\
@@ -166,9 +167,9 @@ En la définissant récursivement de telle sorte~:
 \end{definition}
 
 \begin{definition}
-    Un automate est \textit{homogène} quand pour tous les états les transition
-    allant vers cet état ont même valeur. En d'autre terme quand il respecte
-    cette propriété~:
+    Un automate est \textit{homogène} quand, pour tous les états, les
+    transitions allant vers cet état ont la même valeur. En d’autres termes,
+    quand il respecte cette propriété :
 
     \begin{gather*}
         M = (Q, I, F, \delta) \quad \text{avec} \\
@@ -178,9 +179,9 @@ En la définissant récursivement de telle sorte~:
 \end{definition}
 
 \begin{definition}
-    Un automate est qualifié d'\textit{accessible} lorsqu'en partant des initiaux,
-    on peut arriver sur tous les états qui le composent. C'est-à-dire qu'il valide
-    cette condition~:
+    Un automate est qualifié d'\textit{accessible} lorsqu'en partant des
+    initiaux, on peut arriver sur tous les états qui le composent. C'est-à-dire
+    qu'il valide cette condition~:
 
     \begin{gather*}
         M = (Q, I, F, \delta) \quad \text{avec} \\
@@ -190,9 +191,9 @@ En la définissant récursivement de telle sorte~:
 \end{definition}
 
 \begin{definition}
-    Un automate est considéré comme \textit{coaccessible} au moment où l'inverse de
-    cette automate est accessible. Ceci veut dire qu'il atteste de cette
-    particularité~:
+    Un automate est considéré comme \textit{coaccessible} au moment où, de tous
+    les états, on peut arriver à un état final. Ceci veut dire qu’il atteste de
+    cette particularité :
 
     \begin{gather*}
         M = (Q, I, F, \delta) \quad \text{avec} \\
@@ -211,8 +212,8 @@ En la définissant récursivement de telle sorte~:
         M \in AFN(\Sigma, \eta) \notag
     \end{gather*}
 
-    On parlera de \textit{déterministe complet} lorsque tous ses états vont sur un
-    état par symbole. C'est-à-dire qu'il respecte cette condition~:
+    On parlera de \textit{déterministe complet} lorsque tous ses états vont sur
+    un état par symbole. C'est-à-dire qu'il respecte cette condition~:
 
     \begin{gather*}
         M = (Q, I, F, \delta) \quad \text{avec} \\
@@ -222,19 +223,19 @@ En la définissant récursivement de telle sorte~:
 \end{definition}
 
 \begin{example}
-    Donc l'automate représenté sur la Figure~\ref{fig:automata} est standard, non
-    homogène, accessible et coaccessible. Car il possède bien un unique état
-    initial (\(q_1\)), mais \(q_3\), \(q_4\) et \(q_5\) ne respecte pas la
-    propriété pour être homogène, parce qu'ils ont des transitions allant vers eux
-    avec des valeurs différentes. De plus tous ses états sont par accessible depuis
-    l'état initial et son inverse est, lui-même aussi, accessible. Et bien sûr, il
-    n'est pas déterministe.
+    Donc, l'automate représenté sur la Figure~\ref{fig:automata} est standard,
+    non homogène, accessible et coaccessible. Car il possède bien un unique
+    état initial (\(q_1\)), mais \(q_3\), \(q_4\) et \(q_5\) ne respecte pas la
+    propriété pour être homogène, parce qu'ils ont des transitions allant vers
+    eux avec des valeurs différentes. De plus, tous ses états sont accessibles
+    depuis l'état initial et son inverse est, lui-même aussi, accessible. Et
+    bien sûr, il n'est pas déterministe.
 \end{example}
 
 \begin{definition}
     Nous parlerons de sous-automate pour parler d'une \og{}région\fg{} d'un
-    automate. \(N\) est un sous automate de \(M\) qu'on notera
-    \(N \subseteq M\), s'il vérifie cette propriété~:
+    automate. \(N\) est un sous automate de \(M\) qu'on notera \(N \subseteq
+    M\), s'il vérifie cette propriété~:
 
     \begin{gather*}
         N = (Q', I', F', \delta') \quad \text{avec} \\
@@ -244,10 +245,10 @@ En la définissant récursivement de telle sorte~:
     \end{gather*}
 \end{definition}
 
-Les automates pouvant être représentés à l'aide de graphe, on peut étendre les
+Les automates pouvant être représentés à l'aide de graphes, on peut étendre les
 propriétés sur les graphes aux automates. Par exemple, on pourra parler des
-composantes fortement connexes d'un automate. Autrement dit en partant de
-n'importe quel état, on peut arriver à tous les autres états. Ainsi ça veut
+composantes fortement connexes d'un automate. Autrement dit, en partant de
+n'importe quel état, on peut arriver à tous les autres états. Ainsi, ça veut
 dire qu'un automate fortement connexe vérifierait ceci~:
 
 \begin{gather*}
@@ -259,8 +260,8 @@ dire qu'un automate fortement connexe vérifierait ceci~:
 \begin{definition}
     Une autre notion qui est présente sur les graphes que nous allons adapter
     sur les automates est la notion de \textit{hamac}. Nous dirons qu'un
-    automate est un \textit{hamac} à l'instant où il est standard, accessible et
-    coaccessible (nous gardons le nom \textit{hamac} pour une raison de
+    automate est un \textit{hamac} à l'instant où il est standard, accessible
+    et coaccessible (nous gardons le nom \textit{hamac} pour une raison de
     compréhension). Ceci veut dire qu'il peut être décrit comme ceci~:
 
     \begin{gather*}
@@ -274,16 +275,16 @@ dire qu'un automate fortement connexe vérifierait ceci~:
     La représentation d'un automate \textit{hamac} en graphe. C'est-à-dire en
     enlevant le concept d'états initiaux, finaux et en ajoutant un nouvel état
     où tous les finaux ont une transition vers lui. Et en retirant les valeurs
-    de transition. Le graphe résultant est lui-même un \textit{hamac} avec comme
-    \textit{racine} l'état initiaux et l'\textit{anti-racine} l'état ajouté lors
-    de la transformation.
+    de transition. Le graphe résultant est lui-même un \textit{hamac} avec
+    comme \textit{racine} l'état initial et l'\textit{anti-racine} l'état
+    ajouté lors de la transformation.
 \end{conjecture}
 
 \begin{definition}
     Une autre idée empruntée au graphe est la notion d'\textit{orbite}. Nous
     dirons qu'un sous-automate est une \textit{orbite}, si pour tout couple
-    d'état \(i\) et \(t\), il existe un mot non vide permettant d'aller de \(i\)
-    à \(t\). Aussi défini comme ceci~:
+    d'état \(i\) et \(t\), il existe un mot non vide permettant d'aller de
+    \(i\) à \(t\). Aussi défini comme ceci~:
 
     \begin{gather*}
         \mathcal{O} = (Q, I, F, \delta) \quad \text{avec} \\
@@ -292,20 +293,22 @@ dire qu'un automate fortement connexe vérifierait ceci~:
     \end{gather*}
 
     \noindent Dans la même idée, nous parlerons d'\textit{orbite maximale}
-    lorsque l'orbite n'est inclus dans aucune autre orbite. En d'autres termes
-    que l'orbite est fortement connexe sans prendre les chemins triviaux
+    lorsque l'orbite n'est incluse dans aucune autre orbite. En d'autres
+    termes, que l'orbite est fortement connexe sans prendre les chemins
+    triviaux
     (mot vide).
 \end{definition}
 
 \begin{definition}
     Nous noterons \(In(\mathcal{O})\) et \(Out(\mathcal{O})\) respectivement
-    l'ensemble des portes d'entrées et l'ensemble des portes de sortie de
-    l'orbite \(\mathcal{O}\). Qui peuvent être défini de cette façon~:
+    l'ensemble des portes d'entrée et l'ensemble des portes de sortie de
+    l'orbite \(\mathcal{O}\). Qui peuvent être définies de cette façon~:
 
     \begin{gather*}
-        In(\mathcal{O}) = \{p \in Q' ~|~ \exists a \in \Sigma, \exists q \in Q, p \in \delta(q, a)\} \\
-        Out(\mathcal{O}) = \{p \in Q' ~|~ \exists a \in \Sigma, \exists q \in Q, q \in
-        \delta(p, a)\} \\
+        In(\mathcal{O}) = \{p \in Q' ~|~ \exists a \in \Sigma, \exists q \in Q,
+        p \in \delta(q, a)\} \\
+        Out(\mathcal{O}) = \{p \in Q' ~|~ \exists a \in \Sigma, \exists q \in
+        Q, q \in \delta(p, a)\} \\
         \text{avec} \\
         \mathcal{O} = (Q', I', F', \delta') \land M = (Q, I, F, \delta) \\
         \mathcal{O} \subseteq M \land M \in AFN(\Sigma, \eta)
@@ -315,7 +318,8 @@ dire qu'un automate fortement connexe vérifierait ceci~:
 \begin{definition}
     Avec ceci, on peut définir ce qu'est une \textit{orbite stable}. Une orbite
     est dite \textit{stable} quand pour toutes les sorties, il existe une
-    transition vers toutes les entrées. C'est-à-dire que l'orbite vérifie ceci~:
+    transition vers toutes les entrées. C'est-à-dire que l'orbite vérifie
+    ceci~:
 
     \begin{gather*}
         \forall q \in Out(\mathcal{O}), \exists a \in \Sigma ~|~ \delta(q, a) \cap In(\mathcal{O}) \neq \varnothing \\
@@ -324,14 +328,14 @@ dire qu'un automate fortement connexe vérifierait ceci~:
     \end{gather*}
 
     \noindent On la qualifiera même de \textit{fortement stable} lorsqu'en
-    supprimant toutes les transitions de portes de sorties vers les portes
+    supprimant toutes les transitions de portes des sorties vers les portes
     d'entrée, les orbites maximales de l'orbite sont \textit{fortement stables}.
 \end{definition}
 
 \begin{definition}
     De même, on dira qu'une orbite est \textit{transversale} si toutes les
     entrées viennent des mêmes états et que toutes les sorties vont aux mêmes
-    états. Autrement dit que l'orbite valide cette propriété~:
+    états. Autrement dit, que l'orbite valide cette propriété~:
 
     \begin{gather*}
         \forall (p, q) \in (Out(\mathcal{O}))^2, \bigcup_{a \in \Sigma} \delta(p, a) = \bigcup_{a \in \Sigma} \delta(q, a) \\
@@ -341,7 +345,7 @@ dire qu'un automate fortement connexe vérifierait ceci~:
     \end{gather*}
 
     \noindent Elle sera même \textit{fortement transversale} lorsqu'en
-    supprimant toutes les transitions de portes de sorties vers les portes
+    supprimant toutes les transitions de portes des sorties vers les portes
     d'entrée, les orbites maximales de l'orbite sont
     \textit{fortement transversales}.
 \end{definition}
@@ -365,12 +369,12 @@ Elle peut être définie simplement comme ceci~:
 
 \subsection{Conclusion}
 
-Comme nous venons de voir les automates sont des outils puissants pour
-reconnaitre des mots d'un langage. L'un de leur plus grande force est leur
-simplicité, toutes les opérations sur les automates peuvent donc être
-automatisé. Ce qui fait que cet objet est très intéressant dans le monde de
-l'\textit{informatique}. En revanche l'un de ses points faibles est sa
-représentation, il est difficile de représenter des très gros automates
-contrairement aux expressions régulières. Il serait alors intéressant de
-pouvoir convertir une expression régulière en automate. C'est ce que nous
-allons voir dans la prochaine section.
+Comme nous venons de voir, les automates sont des outils puissants pour
+reconnaitre des mots d’un langage. L’une de leurs grandes forces est leur
+simplicité. Toutes les opérations sur les automates peuvent donc être
+automatisées. Ce qui fait que cet objet est très intéressant dans le monde de
+l’informatique. En revanche, l’un de ses points faibles est sa représentation.
+Il est difficile de représenter des très gros automates, contrairement aux
+expressions régulières. Il serait alors intéressant de pouvoir convertir une
+expression régulière en automate. C’est ce que nous allons voir dans la
+prochaine section.
