--- a/glushkovizer/doc/formal.tex
+++ b/glushkovizer/doc/formal.tex
@@ -15,10 +15,10 @@
     sorting=ynt
 ]{biblatex}
 \addbibresource{references.bib}
-\nocite{*} 
+\nocite{*}
 \usetikzlibrary{positioning}
 \usetikzlibrary{arrows.meta}
-\usetikzlibrary{automata} 
+\usetikzlibrary{automata}
 \usetikzlibrary{arrows}
 \usetikzlibrary{shapes.geometric}
 \usetikzlibrary{calc}
@@ -35,7 +35,7 @@
 \renewcommand{\theconjecture}{\arabic{section}.\arabic{conjecture}}
 \makeatother
 
-%--- begin document ------------------------------------------------------------
+%--- begin document -----------------------------------------------------------
 
 \title{Définition Formelle --- Glushkovizer}
 \author{}
@@ -46,13 +46,13 @@
 \maketitle
 
 \begin{abstract}
-    Ce document constitue la définition formelle des différents types de donnée
-    utilisés tout au long de cette librairie. Dans un premier temps, nous nous
-    concentrerons sur les expressions régulières et les fonctions définies sur
-    celle-ci. Puis dans un second temps, nous nous intéresseront aux automates
-    et à leur divers fonctions définies sur eux. Enfin pour finir, nous
-    parlerons d'automates particuliers, ceux de Glushkov, nous aborderons leurs
-    constructions, ainsi que leurs propriétés.
+    Ce document constitue la définition formelle des différents types de
+    données utilisés tout au long de cette librairie. Dans un premier temps,
+    nous nous concentrerons sur les expressions régulières et les fonctions
+    définies sur celles-ci. Puis, dans un second temps, nous nous intéresserons
+    aux automates et à leurs diverses fonctions définies sur eux. Enfin, pour
+    finir, nous parlerons d’automates particuliers, ceux de Glushkov, nous
+    aborderons leurs constructions ainsi que leurs propriétés.
 \end{abstract}
 
 \newpage
